<resources>
    <string name="app_name">Hotel Reservation</string>

    <!--Headers-->
    <string name="hd_hotel">The Travel Inn</string>
    <string name="hd_room">Select Room</string>
    <string name="hd_confirm">Confirmation</string>
    <string name="hd_info">Booking Information</string>


    <!--Room Types-->
    <string name="rm_type1">Single Room</string>
    <string name="rm_type2">Double Room</string>
    <string name="rm_type3">Triple Room</string>
    <string name="rm_type4">Quadruple Room</string>

    <!--Room Types with price-->
    <string name="rmpc_type1">Single Room\n(Php1,500/night)</string>
    <string name="rmpc_type2">Double Room\n(Php2,500/night)</string>
    <string name="rmpc_type3">Triple Room\n(Php3,500/night)</string>
    <string name="rmpc_type4">Quadruple Room\n(Php4,500/night)</string>

    <!--Button Labels-->
    <string name="btntxt_next">Next</string>
    <string name="btntxt_back">Back</string>
    <string name="btntxt_reserve">Reserve</string>
    <string name="btntxt_viewres">View Reservation</string>


    <!--Form Labels-->
    <string name="form_name">Name</string>
    <string name="form_contact">Contact No.</string>
    <string name="form_ckin">Date of Check-in</string>
    <string name="form_ckout">Date of Check-out</string>
    <string name="form_guest">No. of Guests</string>
    <string name="form_room">Room Type</string>

    <!--Notifications-->
    <string name="inc_form">All fields are required</string>

</resources>