<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/room1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#68000000"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/rm_type1"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/room2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#68000000"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/rm_type2"
                        android:textSize="16sp" />
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/room3"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#68000000"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/rm_type3"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/room4"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#68000000"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/rm_type4"
                    android:textSize="16sp" />
            </LinearLayout>






            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:orientation="horizontal" >


                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@android:color/white"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/btntxt_back" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/hd_room"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

</androidx.constraintlayout.widget.ConstraintLayout>