<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hotel"
    android:backgroundTint="#C4121212"
    android:backgroundTintMode="src_atop"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/hd_hotel"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/btnReserve"
        android:layout_width="189dp"
        android:layout_height="55dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="showAct"
        android:text="@string/btntxt_reserve"
        android:textColor="@android:color/secondary_text_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.323" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="189dp"
        android:layout_height="55dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="showAct"
        android:text="@string/btntxt_viewres"
        android:textColor="@android:color/secondary_text_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReserve"
        app:layout_constraintVertical_bias="0.201" />
</androidx.constraintlayout.widget.ConstraintLayout>