<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/hd_info"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/txtNameLbl"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/form_name"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/txtNameInp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="Full Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@android:color/primary_text_light"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toEndOf="@+id/txtNameLbl"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/txtContactLbl"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/form_contact"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameLbl"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/txtContactInp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="ex. 09987654321"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="@android:color/primary_text_light"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtContactLbl"
        app:layout_constraintTop_toBottomOf="@+id/txtNameInp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtCkinLbl"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/form_ckin"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContactLbl"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/txtCkinInp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:hint="Please select"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColor="@android:color/primary_text_light"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtCkinLbl"
        app:layout_constraintTop_toBottomOf="@+id/txtContactInp"
        app:layout_constraintVertical_bias="0.022"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txtCkoutLbl"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/form_ckout"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCkinLbl"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/txtCkoutInp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:hint="Please select"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColor="@android:color/primary_text_light"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtCkoutLbl"
        app:layout_constraintTop_toBottomOf="@+id/txtContactInp"
        app:layout_constraintVertical_bias="0.183" />

    <TextView
        android:id="@+id/txtGuestLbl"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/form_guest"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCkoutLbl"
        app:layout_constraintVertical_bias="0.063" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtGuestLbl"
        app:layout_constraintTop_toBottomOf="@+id/txtCkoutInp"
        app:layout_constraintVertical_bias="0.037" />

    <Spinner
        android:id="@+id/spinGuestInp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/form_guest"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtGuestLbl"
        app:layout_constraintTop_toBottomOf="@+id/txtCkoutInp"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/btnToTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/btntxt_back"
        android:textColor="@android:color/secondary_text_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGuestLbl"
        app:layout_constraintVertical_bias="0.363" />

    <Button
        android:id="@+id/btnToRooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/btntxt_next"
        android:textColor="@android:color/secondary_text_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinGuestInp"
        app:layout_constraintVertical_bias="0.346" />


</androidx.constraintlayout.widget.ConstraintLayout>